<resources>
    <string name="app_name">LibraryTeam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_login">Forgot Login?</string>
    <string name="register">Register</string>
    <string name="login_to_my_library">Login to MY LIBRARY</string>

    <string name="my_library">MY LIBRARY</string>
    <string name="user_settings">User Settings</string>
    <string name="email">Email</string>
    <string name="enter_email_here">enter email here</string>
    <string name="enter_password_here">enter password here</string>
    <string name="enter_password_again">enter password again</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="enter_date_of_birth_here">enter date of birth here</string>
    <string name="enter_phone_number_here">enter phone number here</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_an_account">Create an account</string>
    <string name="add_image">Add Image</string>
    <string name="username_activityregister">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_activityregister">Register</string>

    <string name="search_for_a_book_here">Search for a book here</string>
    <string name="title_of_book">Title of Book</string>
    <string name="year">Year</string>
    <string name="author">Author:</string>
    <string name="isbn">ISBN:</string>
    <string name="language">Language:</string>
    <string name="publisher">Publisher:</string>
    <string name="published">Published:</string>
    <string name="book_description">Book Description</string>
    <string name="check_out">Check Out</string>
    <string name="checked_out_items">Checked Out Items</string>


    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="search_menu_item">Search</string>
    <string name="user_settings_menu_item">User Settings</string>
    <string name="search_icon">Search icon</string>
    <string name="search_for_books">Search for books</string>
    <string name="language_not_specified">Language not specified</string>
    <string name="publisher_not_specified">Publisher not specified</string>
    <string name="isbn_not_specified">ISBN not specified</string>

    <string name="enter_username_here">enter username here</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="enter_email">enter email</string>
    <string name="send_email">send email</string>
    <string name="back">back</string>
    <string name="home_page">Home Page</string>
</resources>