<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tvMyLibrary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/my_library"
        android:textStyle="bold"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvUserSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/user_settings"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvEmailEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom"
        android:text="@string/email"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/enter_email_here"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvPasswordEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom"
        android:text="@string/password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/enter_password_here"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvDateOfBirthEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom"
        android:text="@string/date_of_birth"
        android:textSize="24sp" />

    <!-- android docs say to use creditCardExpirationDate here -->
    <EditText
        android:id="@+id/etDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/enter_date_of_birth_here"
        android:autofillHints="creditCardExpirationDate"
        android:inputType="date" />

    <TextView
        android:id="@+id/tvPhoneNumberEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom"
        android:text="@string/enter_phone_number_here"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/enter_email_here"
        android:autofillHints="phone"
        android:inputType="phone" />

</LinearLayout>