<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_settings"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:orientation="vertical"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.UpdateSettingsActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvMyLibrary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/my_library"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvUserSettings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/user_settings"
            android:textSize="32sp" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tvUsernameEntry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/username"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_username_here"
            android:autofillHints="username"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tvEmailEntry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/email"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_email_here"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tvPasswordEntry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_password_here"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tvConfirmPasswordEntry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/confirm_password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_password_again"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelUserSettings"
                android:layout_width="150dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/cancel"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateUserSettings"
                android:layout_width="150dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/update"
                android:textSize="20sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>