<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_my_library"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <!-- Username input -->
    <EditText
        android:id="@+id/username"
        android:autofillHints="username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textSize="16sp" />

    <!-- Password input -->
    <EditText
        android:id="@+id/password"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="32dp"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textSize="16sp" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="16dp"
        android:textSize="16sp" />

    <!-- Forgot Login and Register -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/forgot_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_login"
            android:textSize="14sp"
            android:textColor="#0000FF"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="#0000FF"/>
    </LinearLayout>
</LinearLayout>
