<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="25dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textLibraryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_library"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textCheckedOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checked_out_items"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textLibraryName"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/search_for_a_book_here"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textCheckedOut"
        app:layout_constraintTop_toBottomOf="@id/textCheckedOut"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/inputSearch"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>